tests/conformance/invalid/type_infinite_loop_in_generic.ecl
// SPDX-License-Identifier: MPL-2.0

// Test: Infinite type expansion
type Infinite<T> = Infinite<Infinite<T>>

fn main() {
    let x: Infinite<int> = ???;
}
